[package]
name = "protein-json-to-csv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"]}
serde_json = "*"
csv = "*"
structopt = { version = "0.3", default-features = false }
